<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="playlist_maker">Playlist maker</string>
    <string name="share_text" translatable="false">https://practicum.yandex.ru/profile/android-developer</string>
    <string name="share_app_chooser_title">Поделиться приложением</string>
    <string name="share_app_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="share_app_message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="choose_email_client">Выберите почтовый клиент</string>
    <string name="privacy_policy_url">https://yandex.ru/legal/practicum_offer</string>
    <string name="tools_track_time">00:00</string>
    <string name="tools_artist_name">Artist Name</string>
    <string name="tools_track_name">Track Name</string>
    <string name="nothing_find">Ничего не нашлось</string>
    <string name="connecting_trouble">Проблемы со связью</string>
    <string name="try_again">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>
    <string name="you_find">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="time_line">00:00</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="support_mail">email@example.com</string>
    <string name="mediateka">Медиатека</string>
    <string name="empty_media">Ваша медиатека пуста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="create_no_playlist">Вы не создали \n ни одного плейлиста</string>
    <string name="create">Создать</string>
    <string name="overview">Описание</string>
    <string name="name_playlist">Название*</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_bs">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="empty_list">В этом плейлисте нет треков</string>
</resources>