<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/YPBlue"
    tools:context=".MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:layout_marginBottom="24dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingStart="12dp"
            android:paddingBottom="12dp"
            android:text="@string/playlist_maker"
            android:textSize="22sp"
            android:textColor="@color/YPwhite"/>
    </FrameLayout>

    <Button
        style="@style/MainMenuButton"
        android:text="@string/search"
        app:icon="@drawable/ic_search"/>
    <Button
        style="@style/MainMenuButton"
        android:text="@string/media"
        app:icon="@drawable/ic_library"/>
    <Button
        style="@style/MainMenuButton"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings"/>

</LinearLayout>