<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".settings.presentation.SettingsFragment"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical">

    <TextView
        style="@style/TitleNew"
        android:text="@string/settings" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:fontFamily="@font/ys_display_regular"
        android:paddingHorizontal="@dimen/size_16"
        android:paddingVertical="@dimen/size_22"
        android:text="@string/dark_theme"
        android:textAllCaps="false"
        android:textColor="?attr/colorSecondaryVariant"
        android:textFontWeight="400"
        android:textSize="@dimen/text_size_16"
        app:thumbTint="?attr/colorSwitchThumbNormal"
        app:trackTint="?attr/colorAccent"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/share_app"/>
        <ImageButton
            android:id="@+id/shared_button"
            style="@style/SettingMenuButtonR"
            android:src="@drawable/ic_share" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/write_support"/>
        <ImageButton
            android:id="@+id/support_button"
            style="@style/SettingMenuButtonR"
            android:src="@drawable/ic_support" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/user_agreement"/>
        <ImageButton
            android:id="@+id/privacy_button"
            style="@style/SettingMenuButtonR"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>

</LinearLayout>