<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="?attr/colorOnPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="4dp"
        android:layout_marginBottom="24dp">
        <ImageButton
            style="@style/BackArrowButton"
            android:id="@+id/settings_back_button" />
        <TextView
            style="@style/Title"
            android:text="@string/settings" />
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/dark_theme"/>
        <Switch
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="6dp"
            android:layout_marginVertical="18dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/share_app"/>
        <ImageButton
            android:id="@+id/shared_button"
            style="@style/SettingMenuButtonR"
            android:src="@drawable/ic_share" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/write_support"/>
        <ImageButton
            android:id="@+id/support_button"
            style="@style/SettingMenuButtonR"
            android:src="@drawable/ic_support" />
    </FrameLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            style="@style/SettingMenuTetL"
            android:text="@string/user_agreement"/>
        <ImageButton
            android:id="@+id/privacy_button"
            style="@style/SettingMenuButtonR"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>

</LinearLayout>