<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginHorizontal="@dimen/size_12">

    <ImageView
        android:id="@+id/search_track_image"
        android:layout_width="@dimen/size_45"
        android:layout_height="@dimen/size_45"
        android:layout_marginVertical="@dimen/size_8"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="@dimen/size_14"
        android:layout_marginStart="@dimen/size_54"
        android:layout_marginEnd="@dimen/size_32">
        <TextView
            android:id="@+id/search_track_name"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_20"
            android:textSize="@dimen/text_size_16"
            android:textColor="?attr/colorSecondaryVariant"
            android:fontFamily="@font/ys_display_regular"
            android:singleLine="true"
            android:ellipsize="end"
            tools:text="@string/tools_track_name"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_14"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/search_artist_name"
                style="@style/ArtistNameTime"
                android:singleLine="true"
                android:ellipsize="end"
                android:maxEms="12"
                tools:text="@string/tools_artist_name"/>
            <ImageView
                android:layout_width="@dimen/size_14"
                android:layout_height="@dimen/size_14"
                android:src="@drawable/ic_dot"
                app:tint="?attr/colorSecondary"/>
            <TextView
                android:id="@+id/search_track_time"
                style="@style/ArtistNameTime"
                tools:text="@string/tools_track_time"/>
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:layout_width="@dimen/size_24"
        android:layout_height="@dimen/size_24"
        android:layout_gravity="end"
        android:layout_marginVertical="@dimen/size_18"
        android:src="@drawable/ic_arrow_forward"
        app:tint="?attr/colorSecondary" />
</FrameLayout>