<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorOnPrimary"
    tools:context=".PlayerFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_24" />


    <ImageButton
        android:layout_margin="@dimen/size_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/player_back_button"
        style="@style/BackArrowButton" />

    <ImageView
        android:id="@+id/player_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/size_26"
        android:importantForAccessibility="no"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/player_back_button"
        app:layout_constraintBottom_toTopOf="@+id/player_track_name"
        tools:src="@drawable/ic_placeholder_big" />

    <TextView
        style="@style/PlayerAnotherText"
        android:id="@+id/player_track_name"
        android:layout_marginBottom="@dimen/size_12"
        android:layout_marginTop="@dimen/size_24"
        android:textSize="@dimen/text_size_22"
        app:layout_constraintBottom_toTopOf="@+id/player_artist_name"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_image"
        tools:text="Track Name" />

    <TextView
        style="@style/PlayerAnotherText"
        android:id="@+id/player_artist_name"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintTop_toBottomOf="@+id/player_track_name"
        app:layout_constraintBottom_toTopOf="@+id/player_play_track"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        tools:text="Artist" />

    <ImageButton
        android:id="@+id/player_add_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_add_track"
        app:layout_constraintBottom_toBottomOf="@+id/player_play_track"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toTopOf="@+id/player_play_track" />

    <ImageButton
        android:id="@+id/player_play_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_play_track"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toTopOf="@+id/player_track_time"
        app:layout_constraintEnd_toStartOf="@+id/player_like_track"
        app:layout_constraintStart_toEndOf="@+id/player_add_track" />

    <ImageButton
        android:id="@+id/player_like_track"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_like_track"
        app:layout_constraintBottom_toBottomOf="@+id/player_play_track"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintTop_toTopOf="@+id/player_play_track" />

    <TextView
        style="@style/PlayerAnotherText"
        android:id="@+id/player_time_plnw"
        android:layout_marginTop="@dimen/size_4"
        android:textSize="@dimen/text_size_14"
        android:text="@string/time_line"
        app:layout_constraintEnd_toStartOf="@+id/right_guideline"
        app:layout_constraintStart_toStartOf="@+id/left_guideline"
        app:layout_constraintTop_toBottomOf="@+id/player_play_track" />

    <TextView
        style="@style/PlayerLeftParam"
        android:id="@+id/player_track_time"
        android:layout_marginBottom="@dimen/size_18"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@+id/player_album"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/PlayerRightParam"
        android:id="@+id/player_track_time_mills"
        app:layout_constraintBottom_toBottomOf="@+id/player_track_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_track_time"
        tools:text="5:35" />

    <TextView
        style="@style/PlayerLeftParam"
        android:id="@+id/player_album"
        android:layout_marginBottom="@dimen/size_18"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@+id/player_year"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/PlayerRightParam"
        android:id="@+id/player_collection_name"
        app:layout_constraintBottom_toBottomOf="@+id/player_album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_album"
        android:maxLines="1"
        android:ellipsize="end"
        android:maxEms="17"
        tools:text="Yesterday(Remasterd 2009)" />

    <TextView
        style="@style/PlayerLeftParam"
        android:id="@+id/player_year"
        android:layout_marginBottom="@dimen/size_18"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@+id/player_genre"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/PlayerRightParam"
        android:id="@+id/release_date"
        app:layout_constraintBottom_toBottomOf="@+id/player_year"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_year"
        tools:text="1965" />

    <TextView
        style="@style/PlayerLeftParam"
        android:id="@+id/player_genre"
        android:layout_marginBottom="@dimen/size_18"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@+id/player_country"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/PlayerRightParam"
        android:id="@+id/player_primary_genre"
        app:layout_constraintBottom_toBottomOf="@+id/player_genre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_genre"
        tools:text="Rock" />

    <TextView
        style="@style/PlayerLeftParam"
        android:id="@+id/player_country"
        android:text="@string/country"
        app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        style="@style/PlayerRightParam"
        android:id="@+id/player_country_name"
        app:layout_constraintBottom_toBottomOf="@+id/player_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/player_country"
        tools:text="Великобритания" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>